<resources>
    <string name="app_name">Tyche</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_link">Don\'t have an account? Click here.</string>
    <string name="footer_text">Create wealth effortlessly</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_nif">NIF</string>
    <string name="hint_age">Age</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="already_have_account">Already have an account? Click here.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_market">Market</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_profile">Profile</string>
    <string name="coin_volume">Volume</string>
    <string name="welcome">Welcome</string>
    <string name="profit">Profit</string>
    <string name="market">Market:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="nif">NINO:</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="edit_informations">Edit informations</string>
    <string name="logout">Log out</string>
    <string name="strategies">Strategies:</string>
    <string name="create_strategy">Create Strategy</string>
    <string name="select_asset">Select the asset:</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="define_strategy">Define the strategy:</string>
    <string name="safe_strategy">Low risk</string>
    <string name="intermediate_strategy">Medium risk</string>
    <string name="aggress_strategy">High risk</string>
    <string name="safe_strat_description">Lower risk strategy that prioritizes smaller gains and less risky orders.</string>
    <string name="int_strat_description">Intermediate risk strategy that takes greater risks in search of greater gains.</string>
    <string name="aggress_strat_description">Most aggressive strategy available, takes greater risks when buying and selling, and can obtain the greatest gains.</string>
    <string name="confirm">Confirm</string>
    <string name="invest_amount">Amount to invest:</string>
    <string name="balance">Balance:</string>
    <string name="amount">Amount</string>
    <string name="invest_warning">By investing in a strategy you accept the terms of purchase and sale of the strategy and assume the full risk of the investment.  Investing always carries a risk of total loss of the capital invested.</string>
    <string name="last_action_label">Last Action: %1$s</string>
    <string name="action_buy">BUY</string>
    <string name="action_sell">SELL</string>
    <string name="action_none">NONE</string>
    <string name="currency_format">$%1$s</string>
    <string name="percentage_format">%1$s%2$s%%</string>
    <string name="buy_price_label">Buy Price</string>
    <string name="current_balance_label">Current Balance</string>
    <string name="no_strategies_found">No strategies found</string>
    <string name="strategy_click_message">Strategy: %1$s\nBalance: €%2$s</string>
    <string name="hint_url_image">New profile image url</string>
    <string name="hint_api_key">API Key</string>
    <string name="hint_api_secret">API Secret</string>
    <string name="hint_new_password">New password</string>
    <string name="coin_info_rank">Rank:</string>
    <string name="coin_info_market_cap">Market cap:</string>
    <string name="coin_info_supply">Circulation supply:</string>
    <string name="coin_info_high">All time high:</string>
    <string name="coin_info_all_time_low">All time low:</string>
    <string name="coin_info_issue_date">Issue date:</string>
    <string name="errorLoginReg">Please fill out all fields.</string>
    <string name="errorPassword" >Passwords do not match.</string>
    <string name="errorAge">You must be at least 18 years old to use this app.</string>
    <string name="errorLogin">Login failed.</string>
    <string name="errorRegister">Sign in failed.</string>
    <string name="slider_2_text">Tyche is an application dedicated to creating passive income. Create your cryptocurrency trading strategy and let our algorithms and analysis systems determine the best investment decisions for you.</string>
    <string name="slider_3_text">Manage your strategies quickly and easily and analyze their performance.</string>
    <string name="slider_4_text">Check prices in real time.</string>
    <string name="slide_5_text">Start earning now through your Binance® account.</string>
    <string name="start">Start</string>
    <string name="slider_skip_text">Skip</string>
    <string name="error_strategy">No strategies found</string>
    <string name="buy_price">Buy price</string>
    <string name="balance_text">Current balance</string>
    <string name="strategy_created_success">Strategy created successfully!</string>

</resources>
