<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    android:padding="24dp">

    <TextView
        android:id="@+id/footer_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/exo_2"
        android:text="@string/footer_text"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Campos do formulário -->
    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_full_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:backgroundTint="#FFFFFF"
        android:layout_below="@id/app_name"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:backgroundTint="#FFFFFF"
        android:layout_below="@id/full_name"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:backgroundTint="#FFFFFF"
        android:layout_below="@id/username"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/nif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nif"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:backgroundTint="#FFFFFF"
        android:layout_below="@id/email"
        android:layout_marginTop="16dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:backgroundTint="#FFFFFF"
        android:layout_below="@id/nif"
        android:layout_marginTop="16dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:backgroundTint="#FFFFFF"
        android:layout_below="@id/idade"
        android:layout_marginTop="16dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:backgroundTint="#FFFFFF"
        android:layout_below="@id/password"
        android:layout_marginTop="16dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E8AF3B"
        android:fontFamily="@font/exo_2"
        android:text="@string/register_button"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/already_have_account"
        android:textAlignment="center"
        android:textColor="#DDDDDD"
        android:textSize="14sp" />

</RelativeLayout>
