<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilePageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Top Logo -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImage"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/edit_informations"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <!-- Campos do formulário -->
                <EditText
                    android:id="@+id/imgUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_url_image"
                    android:fontFamily="@font/exo_2"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"
                    android:paddingVertical="16dp"/>

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_full_name"
                    android:fontFamily="@font/exo_2"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"
                    android:paddingVertical="16dp"/>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_username"
                    android:fontFamily="@font/exo_2"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_email"
                    android:fontFamily="@font/exo_2"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/nif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_nif"
                    android:fontFamily="@font/exo_2"
                    android:inputType="number"
                    android:lineSpacingExtra="16sp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"/>


                <EditText
                    android:id="@+id/apiKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_api_key"
                    android:fontFamily="@font/exo_2"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"
                    android:paddingVertical="16dp"/>

                <EditText
                    android:id="@+id/apiSecret"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_api_secret"
                    android:fontFamily="@font/exo_2"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"
                    android:paddingVertical="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="10dp"
                    android:background="#FFFFFF" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_password"
                    android:fontFamily="@font/exo_2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_password"
                    android:fontFamily="@font/exo_2"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/newpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_new_password"
                    android:fontFamily="@font/exo_2"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hint_confirm_password"
                    android:fontFamily="@font/exo_2"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="80dp">
                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#892E2E"
                        android:fontFamily="@font/exo_2"
                        android:text="@string/cancel"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:layout_marginEnd="4dp"/>
                    <Button
                        android:id="@+id/nextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/yellow"
                        android:fontFamily="@font/exo_2"
                        android:text="@string/confirm"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:layout_marginStart="4dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>