<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateStrategyPage3Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/caret_left_sm" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2"
            android:text="@string/create_strategy"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/logoImage"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2"
            android:text="@string/invest_amount"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/title"
            android:layout_marginTop="18dp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="64dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/exo_2"
                android:text="@string/balance"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/exo_2"
                android:text=" 999€"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_weight="0.9"
                android:inputType="text"
                android:text="@string/amount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo_2"
                android:layout_weight="0.1"
                android:text="€"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="120dp">
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:backgroundTint="#892E2E"
                android:fontFamily="@font/exo_2"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginEnd="4dp"/>
            <Button
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/yellow"
                android:fontFamily="@font/exo_2"
                android:text="@string/confirm"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>